<resources>
    <string name="app_name">MiniProject3</string>
    <string name="first_and_last_name">علی عطار</string>
    <string name="skill">مهارت</string>
    <string name="job">شغل</string>
    <string name="phone_number">تلفن همراه</string>
    <string name="where_seen">کجا دیده شده</string>
    <string name="description">توضیحات</string>
    <string name="register">ثبت</string>
    <string name="Bio">
      "  مهارت:برنامه نویس اندروید\n
       \nشغل:کاراموز
        مدرک:فوق دکترای نرم افزار
        "

    </string>

    <string name="ANODYNE">POWERED BY ANODYNE</string>
    <string name="partner">P A R T N E R</string>
    <string name="username_phone">شماره همراه</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="login_page">صفحه ورود</string>


</resources>