<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EDED">


    <View
        android:id="@+id/v_one_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bg_logo"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_one_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_page"
        android:fontFamily="@font/peyda_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cv_login"
        app:layout_constraintTop_toTopOf="@id/v_one_login" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        android:elevation="@dimen/_10sdp"
        app:cardBackgroundColor="#fcfcfc"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/v_one_login"
        app:layout_constraintTop_toBottomOf="@id/v_one_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/username_phone"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_person_bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/peyda_regular"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/password"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_lock"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:fontFamily="@font/peyda_regular"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@id/cv_login"
        app:layout_constraintLeft_toLeftOf="@id/cv_login"
        app:layout_constraintRight_toRightOf="@id/cv_login"
        app:layout_constraintTop_toBottomOf="@id/cv_login">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/bg_logo"
            android:elevation="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/peyda_bold"
            />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_large_f" />

        <TextView
            android:id="@+id/partner_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/peyda_regular"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/partner"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/ANODYNE"
            android:textColor="@color/black"

            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>